--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,21 @@
-# POSTGRES
-POSTGRES_USER=prisma
-POSTGRES_PASSWORD=topsecret
-POSTGRES_DB=blog
+# MYSQL
+MYSQL_USER=root
+MYSQL_PASSWORD=zhihang666
+MYSQL_DB=dataflowhub
 
 # Nest run locally
-DB_HOST=localhost
+DB_HOST=1.117.28.22
 # Nest run in docker, change host to database container name
-# DB_HOST=postgres
-DB_PORT=5432
-DB_SCHEMA=blog
+DB_PORT=3306
 
 # Prisma database connection
-DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?schema=${DB_SCHEMA}&sslmode=prefer
+DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${DB_HOST}:${DB_PORT}/${MYSQL_DB}?sslmode=prefer
 
 # Nest
 PORT=3000
+
+# redis
+Redis_URL="redis://:zhihang666@1.117.28.22:6379"
 
 # Security
 JWT_ACCESS_SECRET=nestjsPrismaAccessSecret
