--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,5 @@ Redis_URL="redis://:zhihang666@1.117.28.22:6379"
 # Security
 JWT_ACCESS_SECRET=nestjsPrismaAccessSecret
 JWT_REFRESH_SECRET=nestjsPrismaRefreshSecret
+
+#TEST
